# music-util

./: Cargo.toml
music-manager/: Cargo.toml
music-manager/src/: duplicates.rs  error.rs  lib.rs  sort.rs
music-manager/src/duplicates/: metadata.rs
songman/: Cargo.toml
songman/src/: cli.rs  duplicates.rs  hash.rs  info.rs  main.rs  sort.rs  stats.rs
songman/src/duplicates/: stream.rs
src/: cli.rs  duplicates.rs  error.rs  info.rs  main.rs  metadata.rs  sort.rs  stats.rs  walksongs.rs
src/duplicates/: filename.rs  recurse.rs
