[package]
name = "music-util"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["all"] }
thiserror = "2.0.12"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
