[package]
name = "songman"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
music-manager = { version = "0.1.0", path = "../music-manager" }
serde_json = "1.0.140"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
